--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@ layout: compress
                 {{ content }}
             </main>
         {% include scripts.html %}
+        <script id="dsq-count-scr" src="//https-{{ github_username }}-github-io.disqus.com/count.js" async></script>
     </body>
 </html>
