--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,2 @@
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
+<script id="dsq-count-scr" src="//https-{{ github_username }}-github-io.disqus.com/count.js" async></script>
