deprecated old search form

--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -1,20 +1,23 @@
 <div class="search-wrapper">
-    <script>
-        (function() {
-            var cx = '016268363654363758983:p_xfri_jhnw';
-            var gcse = document.createElement('script');
-            gcse.type = 'text/javascript';
-            gcse.async = true;
-            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(gcse, s);
-        })();
-    </script>
-    <gcse:search></gcse:search>
+
     <div class="search-form">
-        <input arial-label="Search for a post" type="text" class="search-field" placeholder="Search...">
-        <svg class="icon-remove-sign"><use xlink:href="#icon-close"></use></svg>
-        <ul class="search-results search-list"></ul>
+        <script>
+            (function() {
+                var cx = '016268363654363758983:p_xfri_jhnw';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+            })();
+        </script>
+        <gcse:search></gcse:search>
+
+        <!-- @Deprecated -->
+        <!--<input arial-label="Search for a post" type="text" class="search-field" placeholder="Search...">-->
+        <!--<svg class="icon-remove-sign"><use xlink:href="#icon-close"></use></svg>-->
+        <!--<ul class="search-results search-list"></ul>-->
     </div>
 
 </div>
