--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -17,10 +17,10 @@
   <div id="topmenu">
     {% assign filename = page.url | replace_first: '/', '' | replace: '/', '-'  | replace: '.html', '.md' %}
     <ul>
-      <li><span>1</span></li>
+      <li><span>😃</span></li>
       <li><span> {{page.url}}</span></li>
-      <li><span>⌘ blogspace λ </span></li>
-      <li><span>* Menu</span></li>
+      <li><span>🎇 Code Everywhere</span></li>
+      <li><span> {{page.title}}</span></li>
     </ul>
 
     <ul>
