--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,4 +1,6 @@
 <header class="header-post">
-   	<p>{{site.title}}</p>
+    <h1>
+        <span class="site-title">{{site.title}}</span>
+    </h1>
     {% include menu-search.html %}
 </header>
