fix css and header

--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -19,7 +19,7 @@
     <ul>
       <li><span>😃</span></li>
       <li><span> {{page.url}}</span></li>
-      <li><span>🎇 Code Everywhere</span></li>
+      <li><span>🎇 {{site.title}}</span></li>
       <li><span> {{page.title}}</span></li>
     </ul>
 
