--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,6 +1,4 @@
 <header class="header-post">
-    <h1>
-        <span class="site-title">{{site.title}}</span>
-    </h1>
+    <p>🎇 {{site.title}}</p>
     {% include menu-search.html %}
 </header>
