--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -513,13 +513,13 @@ aside #topmenu ul li:first-child span {
     font-weight: 300
 }
 
-aside #topmenu ul li:nth-child(3) {
+aside #topmenu ul li:nth-child(2) {
     background: #ab67ab;
     padding-right: 30px;
     padding-left: 30px;
 }
 
-aside #topmenu ul li:nth-child(3) span {
+aside #topmenu ul li:nth-child(2) span {
     color: #fff
 }
 
@@ -727,23 +727,16 @@ body.search-overlay:after {
     padding-left: 10%;
 }
 
-.search-wrapper * zoom
-
-1
-:after, .search-wrapper * zoom
-
-1
-:before {
-    display: table;
-    line-height: 0;
-    content: ""
+.search-wrapper:after {
+    clear: both;
+    zoom:1;
 }
 
-.search-wrapper * zoom
-
-1
-:after {
-    clear: both
+.search-wrapper:before {
+    display: table;
+    line-height: 0;
+    content: "";
+    zoom:1;
 }
 
 .search-wrapper:before, .search-wrapper:after {
@@ -978,7 +971,6 @@ html, body {
     background: transparent
 }
 
-}
 .header-post p {
     margin: 0;
     padding-top: 23px;
