--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,11 @@
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 <script id="dsq-count-scr" src="//https-{{ github_username }}-github-io.disqus.com/count.js" async></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99584797-4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-99584797-4');
+</script>
