add css animation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-	<p><span class="light">🎇</span> {{site.title}}</p>
+	<strong><span class="light">🎇</span> {{site.title}}</strong>
 
 </footer>
