--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -17,7 +17,7 @@
   <div id="topmenu">
     {% assign filename = page.url | replace_first: '/', '' | replace: '/', '-'  | replace: '.html', '.md' %}
     <ul>
-      <li><span class="smile">😃</span></li>
+      <li><span>😃</span></li>
       <li><span> <span class="light">🎇</span> {{site.title}}</span></li>
       <li><span> {{page.url}}</span></li>
       <li><span> {{page.title}}</span></li>
