--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -6,7 +6,7 @@
         </div>
 
         <h1>
-            <span class="site-title">{{site.title}}</span>
+            <span class="site-title"><span class="light">🎇</span> {{site.title}}</span>
         </h1>
 
         <div class="icons-home">
