--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,4 +1,4 @@
 <header class="header-post">
-    <p>🎇 {{site.title}}</p>
+    <p>🌞 {{site.title}}</p>
     {% include menu-search.html %}
 </header>
