--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -18,7 +18,7 @@
     {% assign filename = page.url | replace_first: '/', '' | replace: '/', '-'  | replace: '.html', '.md' %}
     <ul>
       <li><span>😃</span></li>
-      <li><span> <span class="light">🎇</span> {{site.title}}</span></li>
+      <li><span> <span class="light">🌞</span> {{site.title}}</span></li>
       <li><span> {{page.url}}</span></li>
       <li><span> {{page.title}}</span></li>
     </ul>
