--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     {% if page.image %}
     <meta property="twitter:image:src" content="{{ site.url }}{{page.image }}">
     {% else %}
-    <meta property="twitter:image:src" content="{{ site.profile_picture | prepend: site.baseurl | prepend: site.url }}">
+    <meta property="twitter:image:src" content="{{site.profile_picture}}">
     {% endif %}
 
     <!-- Social Facebook/Open Graph -->
@@ -28,7 +28,7 @@
     {% if page.image %}
     <meta property="og:image" content="{{ site.url }}{{page.image }}">
     {% else %}
-    <meta property="og:image" content="{{ site.profile_picture | prepend: site.baseurl | prepend: site.url }}">
+    <meta property="og:image" content="{{site.profile_picture}}">
     {% endif %}
     <meta property="og:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:site_name" content="{{ site.title }}">
@@ -36,7 +36,7 @@
     <!-- Social Google+/Schema.org  -->
     <meta itemprop="name" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
     <meta itemprop="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <meta itemprop="image" content="{{ site.profile_picture | prepend: site.baseurl | prepend: site.url }}"/>
+    <meta itemprop="image" content="{{site.profile_picture}}"/>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{site.baseurl}}/assets/img/icons/favicon.ico" type="image/x-icon" />
