--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1040,7 +1040,7 @@ html, body {
     height: 4px;
     position: absolute;
     bottom: 0;
-    background-color: #ab67ab
+    background-color: #ab67ab;
     /*background-color: #c06a64*/
 }
 
