chore: update ga tag

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,11 +1,11 @@
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 <script id="dsq-count-scr" src="//https-{{ github_username }}-github-io.disqus.com/count.js" async></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99584797-4"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MNH98T1N0"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-99584797-4');
+  gtag('config', 'G-2MNH98T1N0');
 </script>
