--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1795,6 +1795,10 @@ h1.post-title {
     text-align: center;
 }
 
+.post-content a {
+    display: block;
+}
+
 .post-content a > span {
     display: inline-block;
 }
