fix: 초기 로드시 가로 스크롤 오류 수정

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1219,6 +1219,7 @@ html, body {
 
 .post-content p, .post-content li {
     color: #333;
+    word-break: break-all;
 }
 
 .post-content p code, .post-content li code {
