--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1564,6 +1564,21 @@ pre span {
     margin-bottom: 30px
 }
 
+.highlight::-webkit-scrollbar {
+    width: 10px;
+}
+.highlight::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
+}
+.highlight::-webkit-scrollbar-track {
+    background-color: grey;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+}
+
 .highlight .hll {
     background-color: #ffc
 }
