change http to https

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@
         {% include svg-icons.html %}
         {% include header-post.html %}
         {% include tree-posts.html %}
-        <section class="post" itemscope itemtype="http://schema.org/BlogPosting">
+        <section class="post" itemscope itemtype="https://schema.org/BlogPosting">
             {% if page.date %}
                 <div class="time">
                     <time itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
