--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -9,7 +9,7 @@ layout: compress
         {% include svg-icons.html %}
         {% include header-post.html %}
         {% include tree-posts.html %}
-        <section class="post" itemscope itemtype="http://schema.org/WebPage">
+        <section class="post" itemscope itemtype="https://schema.org/WebPage">
 
             <article role="article" id="scroll" class="post-content" role="main" itemprop="mainContentOfPage">
                 {{ content }}
