--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ comments: true
 ---
 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="ko">
   	{% include head.html %}
     <body>
     	{% include svg-icons.html %}
